# juntagrico-assignment-request

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements-local.txt  requirements.txt  setup.cfg  setup.py  testsettings.py  testurls.py
.github/workflows/: juntagrico-ci.yml  python-publish.yml
juntagrico_assignment_request/: __init__.py  admin.py  apps.py  config.py  forms.py  hack.py  juntagricoapp.py  mailer.py  models.py  urls.py  utils.py  view_decorators.py  views.py
juntagrico_assignment_request/admins/: assignment_request_admin.py
juntagrico_assignment_request/dao/: assignmentrequestdao.py
juntagrico_assignment_request/entity/: assignment_request.py
juntagrico_assignment_request/mailer/: __init__.py  adminnotification.py  membernotification.py
juntagrico_assignment_request/migrations/: 0001_squashed_0006_auto_20191020_2203.py  0002_fix_naming_and_relation.py  0003_change_assignment_helptext.py  0003_integrate_assignment_naming.py  0004_auto_20211207_1101.py  0005_alter_assignmentrequest_amount.py  0006_alter_assignmentrequest_options.py
juntagrico_assignment_request/templates/assignment_request/: edit.html  edit_assignment_request.html  list.html  list_assignment_requests.html  request.html  request_assignment.html  respond_assignment_request.html
juntagrico_assignment_request/tests/: __init__.py  test_admin.py  test_approvers.py  test_assignment_request.py  test_assignment_request_hours.py  test_manipulation.py
test/: __init__.py  test_admin.py  test_assignment_request.py  test_assignment_request_hours.py  test_manipulation.py
(+20 files in other folders)
